+ Added beta prototype for "run once" Procedure functionality.

--- a/trunk/templates/bkp/view_computer.html
+++ b/trunk/templates/bkp/view_computer.html
@@ -52,6 +52,7 @@
 	                <form action="{{script_name}}/{{p.delete_url}}" method="post">
 	                    <button type="submit"><span>Remover</span></button>
 	                </form>
+	                <button onclick="location.href='{{script_name}}/{{p.new_run_url}}'"><span>Executar</span></button>
 	            </div>
 	        </div>
 	        <ul class="aux">
