--- a/trunk/templates/bkp/delete_bandwidthrestriction.html
+++ b/trunk/templates/bkp/delete_bandwidthrestriction.html
@@ -2,9 +2,7 @@
 
 {% block content %}
 
-<h3>Confirmar remo&ccedil;&atilde;o de restri&ccedil;&atilde;o de banda</h3>
-
-<p>Dejesa realmente remover a restri&ccedil;&atilde;o de banda '{{ bandwidthrestriction }}' ?</p>
+<p>Dejesa realmente remover a restrição de banda '{{ bandwidthrestriction }}' ?</p>
 
 <form name="delete_bandwidthrestriction" action="{{script_name}}/bandwidthrestriction/{{bandwidthrestriction.id}}/delete" method="POST">
 
