+ Re-organized templates folder tree

--- a/trunk/templates/bkp/new/new_restore.html
+++ b/trunk/templates/bkp/new/new_restore.html
@@ -40,6 +40,6 @@
 <input type="submit" value="restaurar" />
 </form>
 
-
+<a href="{{script_name}}/computer/{{comp.id}}">Cancelar</a>
 <hr />
 {% endblock %}
