--- a/trunk/templates/bkp/new/new_run_procedure.html
+++ b/trunk/templates/bkp/new/new_run_procedure.html
@@ -25,6 +25,6 @@
     <p><input type="submit" value="Salvar" /></p>
 </form>
 
-
+<a href="{{script_name}}/computer/{{comp.id}}">Cancelar</a>
 <hr />
 {% endblock %}
