+ Re-factored bacula.py + Added client status functionality + Fixed view import bug

--- a/trunk/templates/bkp/view/view_computer.html
+++ b/trunk/templates/bkp/view/view_computer.html
@@ -25,7 +25,7 @@
 	    <ul class="aux">
 	        <li><strong class="label">IP:</strong> <span class="value">{{ comp.ip }}</span></li>
 	        <li><strong class="label">Descrição:</strong> <span class="value">{{ comp.description }}</span></li>
-	        <li><strong class="label">Status:</strong> <span class="value">Falta Implementar</span></li>
+	        <li><strong class="label">Status:</strong> <span class="value">{{ compstatus }}</span></li>
 	    </ul>
 	</div>
 
