+ Fixed table close tag template bug at view_computer.html + Added logging capability to bacula.py calls + Fixed procedures.py removing debug pdb.set_trace() call

--- a/trunk/templates/bkp/view/view_computer.html
+++ b/trunk/templates/bkp/view/view_computer.html
@@ -132,9 +132,11 @@
 	        <td> {{ job.JobBytes }} </td>
 	        <td> {{ job.JobErrors }} </td>
 		</tr>
-        {% endfor %}
+			{% if forloop.last %}
 		</tbody>
 		</table>
+			{% endif %}
+        {% endfor %}
     </div>
 
 
@@ -180,8 +182,10 @@
 			</td>
 			{% endifequal %}
 		</tr>
-        {% endfor %}
+			{% if forloop.last %}
 		</tbody>
 		</table>
+			{% endif %}
+        {% endfor %}
     </div>
 {% endblock %}
