+ Fixed Computer status bug + Added fd_password display at view_computer template

--- a/trunk/templates/bkp/view/view_computer.html
+++ b/trunk/templates/bkp/view/view_computer.html
@@ -26,6 +26,7 @@
 	        <li><strong class="label">IP:</strong> <span class="value">{{ comp.ip }}</span></li>
 	        <li><strong class="label">Descrição:</strong> <span class="value">{{ comp.description }}</span></li>
 	        <li><strong class="label">Status:</strong> <span class="value">{{ compstatus }}</span></li>
+	        <li><strong class="label">Password:</strong> <span class="value">{{ comp.fd_password }}</span></li>
 	    </ul>
 	</div>
 
