--- a/trunk/templates/bkp/new/new_schedule.html
+++ b/trunk/templates/bkp/new/new_schedule.html
@@ -14,13 +14,27 @@
 
 	<h3>Detalhes Agendamento {{ sched.type }}</h3>
 
-    {% for field in triggform %}
+    <div class="mtriggform">
+    {% for field in mtriggform %}
         <div class="fieldWrapper">
             {{ field.errors }}
             {{ field.label_tag }} {{ field }}
         </div>
     {% endfor %}
+    </div>
 
+    <div class="wtriggform">
+    {% for field in wtriggform %}
+        <div class="fieldWrapper">
+            {{ field.errors }}
+            {{ field.label_tag }} {{ field }}
+        </div>
+    {% endfor %}
+    </div>
+
+    <div class="triggform_message">
+        <p>Por favor selecione o tipo de agendamento no formulário acima.</p>
+    </div>
 
     {% for field in schedauxform %}
 		{{ field }}
