+ job restore testing

--- a/trunk/templates/bkp/new/new_restore.html
+++ b/trunk/templates/bkp/new/new_restore.html
@@ -31,7 +31,7 @@
 	{% endfor %}
 {% else %}
 {# build fields from scratch #}
-	 <input type="hidden" name="job_id" value="{{job_id}}" id="id_job_id" />
+	 <input type="hidden" name="fileset_name" value="{{fileset_name}}" id="id_fileset_name" />
 	 <input type="hidden" name="client_source" value="{{src_client}}" id="id_client_source" />
 	 <input type="hidden" name="target_dt" value="{{target_dt}}" id="id_target_dt" />
 {% endif %}
