--- a/trunk/templates/bkp/static/estilo.css
+++ b/trunk/templates/bkp/static/estilo.css
@@ -60,16 +60,18 @@ width:321px;
 }
 
 #topo .menu {
-margin:5px 0 0 120px;
+margin: 7px 0 0 120px;
+background:transparent url(../static/imagens/bg_menu.gif) repeat-x scroll left top;
+width: 840px;
+overflow: hidden;
 }
 
 #topo .menu ul {
-background:transparent url(../static/imagens/bg_menu.gif) no-repeat scroll left top;
 height:37px;
 margin:0;
 overflow:hidden;
 padding:0 0 0 5px;
-width:815px;
+float: left;
 }
 
 #topo .menu ul li {
@@ -82,7 +84,7 @@ padding:0;
 color:#4B5555;
 display:block;
 font-size:12px;
-padding:13px 9px;
+padding:12px 9px 14px;
 text-decoration:none;
 }
 
@@ -91,6 +93,13 @@ text-decoration:none;
 background:transparent url(../static/imagens/bg_menu_selected.gif) repeat-x scroll left top;
 color:#D4D6D6;
 text-decoration:none;
+}
+
+#topo .menu form {
+float: right;
+padding: 7px 10px 0 0;
+color: #345;
+font-size: 11px;
 }
 
 
@@ -300,6 +309,7 @@ padding: 10px;
 margin-top: 20px;
 color: #999;
 }
+
 
 
 
